# BulkGit

./: .gitignore  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  bindings.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  git_worker.rs  lib.rs  main.rs  scanner.rs  types.rs
src/components/: AppErrorBoundary.tsx  CommandBar.tsx  CustomTooltip.tsx  DiffViewer.tsx  MergeResolver.tsx  QueuePanel.tsx  RepoCard.tsx  RepoDetailsPanel.tsx  Sidebar.tsx  SkeletonCard.tsx  SystemCheck.tsx  diffParser.ts
src/hooks/: useKeyboard.ts  useMediaQuery.ts  useTauriEvents.ts  useVirtual.ts
src/store/: store.ts
src/styles/: globals.css
src/utils/: time.ts
