[package]
name = "bulkgit"
version = "0.1.1"
description = "BulkGit — monitor and manage all your Git repos"
authors = ["BulkGit"]
edition = "2021"

[lib]
name = "bulkgit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Type-safe bindings
tauri-specta = { version = "2.0.0-rc.25", features = ["typescript"] }
specta = "=2.0.0-rc.25"
specta-typescript = "0.0.12"

# Git operations
git2 = { version = "0.19", default-features = false, features = ["https", "ssh"] }

# Concurrency
rayon = "1.10"
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File traversal
walkdir = "2.5"

# Time
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
